# easy-finance

./: .gitignore  README.md  pyproject.toml  requirements.txt  rxconfig.py
easy_finance/: __init__.py  bank_slip.py  basic_setting.py  components.py  easy_finance.py  invoice.py  log.py  model.py  models.py  request_api.py
easy_finance/pages/: components.py  display.py  index.py  recognize.py  test.py  upload.py
easy_finance/utils/: bank_slip.py  invoice.py  log.py  request_api.py
