[project]
name = "easy-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.7",
    "aiolimiter>=1.1.0",
    "polars>=1.7.1",
    "python-dotenv>=1.0.1",
    "reflex>=0.6.0",
    "xlsxwriter>=3.2.0",
]
